--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
-        versionName '20241107-2222'
+        versionName '20241106-2222'
         multiDexEnabled true
         //设置room的Schema的位置
         javaCompileOptions {
@@ -58,6 +58,12 @@ android {
     }
 }
 
+repositories {      //xuameng
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 dependencies {
     api fileTree(dir: "libs", include: ["*.jar"])
 
@@ -69,7 +75,9 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation files('libs/thunder.jar')
     implementation files('libs/commons-lang3-3.12.0.jar')
-    implementation files('libs/xwalk_shared_library-23.53.589.4.aar')
+
+//xuameng    implementation files('libs/xwalk_shared_library-23.53.589.4.aar')
+    implementation(name:'xwalk_shared_library-23.53.589.4',ext:'aar')
 
     implementation 'com.squareup.okhttp3:okhttp:3.12.11'
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
