--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,4 +104,11 @@ dependencies {
     implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
       //工具类
     implementation 'com.blankj:utilcodex:1.31.0'
+    //xuameng exo
+    api "com.google.android.exoplayer:exoplayer-core:2.14.2"
+    api "com.google.android.exoplayer:exoplayer-dash:2.14.2"
+    api "com.google.android.exoplayer:exoplayer-hls:2.14.2"
+    api "com.google.android.exoplayer:exoplayer-rtsp:2.14.2"
+    api "com.google.android.exoplayer:extension-rtmp:2.14.2"
+    api "com.google.android.exoplayer:extension-okhttp:2.14.2"
 }
