--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.2.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"   //xuameng编译警告
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
