--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,16 @@ android {
 dependencies {
     api fileTree(dir: "libs", include: ["*.jar"])
 
+    constraints {             //xuameng编译警告
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
+            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
+        }
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
+            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
+        }
+    }
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"  //xuameng编译警告
+
     implementation 'org.nanohttpd:nanohttpd:2.3.1'
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
