--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = "1.9.25" //xuameng编译警告
     repositories {
         gradlePluginPortal()
         google()
@@ -11,7 +12,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.2.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"   //xuameng编译警告
+	classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"   //xuameng编译警告
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
