--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,7 @@ dependencies {
     implementation files('libs/thunder.jar')
     implementation files('libs/commons-lang3-3.12.0.jar')
     implementation files('libs/xwalk_shared_library-23.53.589.4.aar')
-
+implementation 'com.example.library:computeoffset:1.0.0'
     implementation 'com.squareup.okhttp3:okhttp:3.12.11'
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
     implementation 'androidx.room:room-runtime:2.3.0'
