--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ buildscript {
         maven { url "https://storage.googleapis.com/r8-releases/raw" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.2.2"
+//        classpath "com.android.tools.build:gradle:7.2.2"
+        classpath 'com.android.tools.build:gradle:4.2.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
