--- a/player/build.gradle
+++ b/player/build.gradle
@@ -13,7 +13,8 @@ android {
     buildTypes {
         all {
             ndk {
-                abiFilters 'armeabi-v7a'
+                //abiFilters "armeabi-v7a"//, ""
+                abiFilters "arm64-v8a"
             }
         }
         release {
