--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,8 @@ android {
             minifyEnabled false
 
             ndk {
-                abiFilters 'armeabi-v7a'
+                //abiFilters "armeabi-v7a"//, ""
+                abiFilters "arm64-v8a"
             }
         }
         release {
@@ -36,7 +37,8 @@ android {
             minifyEnabled true
 
             ndk {
-                abiFilters 'armeabi-v7a'
+                //abiFilters "armeabi-v7a"//, ""
+                abiFilters "arm64-v8a"
             }
         }
     }
