--- a/quickjs/build.gradle
+++ b/quickjs/build.gradle
@@ -11,7 +11,8 @@ android {
         targetSdkVersion 26
         externalNativeBuild {
             cmake {
-                abiFilters 'armeabi-v7a'
+                //abiFilters "armeabi-v7a"//, ""
+                abiFilters "arm64-v8a"
             }
         }
     }
@@ -19,7 +20,8 @@ android {
     buildTypes {
         all {
             ndk {
-                abiFilters 'armeabi-v7a'
+                //abiFilters "armeabi-v7a"//, ""
+                abiFilters "arm64-v8a"
             }
         }
         release {
