--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,7 @@ android {
             minifyEnabled false
 
             ndk {
-                //abiFilters "armeabi-v7a"//, ""
-                abiFilters "arm64-v8a"
+                abiFilters 'armeabi-v7a'
             }
         }
         release {
@@ -37,8 +36,7 @@ android {
             minifyEnabled true
 
             ndk {
-                //abiFilters "armeabi-v7a"//, ""
-                abiFilters "arm64-v8a"
+                abiFilters 'armeabi-v7a'
             }
         }
     }
