--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,8 +109,7 @@ dependencies {
     implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
       //工具类
     implementation 'com.blankj:utilcodex:1.31.0'
-//    implementation 'com.github.alidili:FlowLayout:v1.5'  //xuameng搜索历史
-    compile 'com.github.alidili:FlowLayout:v1.5'
+    implementation 'com.github.alidili:FlowLayout:v1.5'  //xuameng搜索历史
     //xuameng exo
     api "com.google.android.exoplayer:exoplayer-core:2.14.2"
     api "com.google.android.exoplayer:exoplayer-dash:2.14.2"
