--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         gradlePluginPortal()
         google()
         mavenCentral()
-//        maven { url "https://jitpack.io" }
+        maven { url "https://jitpack.io" }
         maven { url "https://maven.aliyun.com/repository/releases" }
         maven { url "https://maven.aliyun.com/repository/public" }
         maven { url "https://storage.googleapis.com/r8-releases/raw" }
@@ -22,7 +22,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-//        maven { url "https://jitpack.io" }
+        maven { url "https://jitpack.io" }
         maven { url "https://maven.aliyun.com/repository/releases" }
         maven { url "https://maven.aliyun.com/repository/public" }
         gradlePluginPortal()
