--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,7 @@ buildscript {
         maven { url "https://storage.googleapis.com/r8-releases/raw" }
     }
     dependencies {
-   //     classpath "com.android.tools.build:gradle:7.2.2"
-	classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath "com.android.tools.build:gradle:7.2.2"
 	classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
