--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,8 +78,7 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.squareup.okio:okio:2.8.0'
-//    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.45-androidx'
-    implementation "io.github.cymchad:BaseRecyclerViewAdapterHelper4:4.1.4"
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.45-androidx'
     implementation 'com.kingja.loadsir:loadsir:1.3.8'
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'com.squareup.picasso:picasso:2.71828'
@@ -103,8 +102,7 @@ dependencies {
  //   implementation 'com.github.getActivity:XXPermissions:13.6'
     implementation 'com.github.getActivity:XXPermissions:18.5'
     implementation 'org.jsoup:jsoup:1.14.1'
-//    implementation 'com.github.hedzr:android-file-chooser:v1.2.0-final'
-    implementation 'com.github.hedzr:android-file-chooser:v1.2.0'
+    implementation 'com.github.hedzr:android-file-chooser:v1.2.0-final'
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
       //工具类
