--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,8 +78,7 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.squareup.okio:okio:2.8.0'
-//    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.45'
-    implementation "io.github.cymchad:BaseRecyclerViewAdapterHelper4:4.1.4"
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.45'
     implementation 'com.kingja.loadsir:loadsir:1.3.8'
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'com.squareup.picasso:picasso:2.71828'
