--- a/player/build.gradle
+++ b/player/build.gradle
@@ -35,6 +35,6 @@ dependencies {
     implementation "androidx.annotation:annotation:1.3.0"
     implementation 'com.squareup.okhttp3:okhttp:3.12.11'    
     implementation 'com.orhanobut:hawk:2.0.1'
-    implementation project(":app")
+    implementation project(":app-src-main-java-com-github-tvbox-osc-util")
     api 'xyz.doikki.android.dkplayer:dkplayer-ui:3.3.5'
 }
