--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,4 +115,5 @@ dependencies {
     api "com.google.android.exoplayer:exoplayer-rtsp:2.14.2"
     api "com.google.android.exoplayer:extension-rtmp:2.14.2"
     api "com.google.android.exoplayer:extension-okhttp:2.14.2"
+    api "com.google.android.exoplayer:exoplayer-ui:2.14.2"
 }
